Fix table buttons aligment
Rated task buttons were not aligned at the end of the container

--- a/frontend/src/components/TaskTable.module.scss
+++ b/frontend/src/components/TaskTable.module.scss
@@ -10,6 +10,7 @@
   @extend .textAlignEnd;
   display: flex;
   gap: 10px;
+  margin-left: auto;
 }
 
 .doneIcon {
